crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__deep_chain_plan.snap
---
source: crates/shipper-plan/src/lib.rs
assertion_line: 1150
expression: snapshot_of(&ws)
---
packages:
  - name: x
    version: 0.1.0
  - name: y
    version: 0.1.0
  - name: z
    version: 0.1.0
dependencies:
  x: []
  y:
    - x
  z:
    - y
skipped: []
registry_name: crates-io
