crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__dev_dep_cycle_plan.snap
---
source: crates/shipper-core/src/plan/mod.rs
expression: snapshot_of(&ws)
---
packages:
  - name: crate-y
    version: 0.1.0
  - name: crate-x
    version: 0.1.0
dependencies:
  crate-x:
    - crate-y
  crate-y: []
skipped: []
registry_name: crates-io
