crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__diamond_plan.snap
---
source: crates/shipper-core/src/plan/mod.rs
expression: snapshot_of(&ws)
---
packages:
  - name: diamond-d
    version: 0.1.0
  - name: diamond-b
    version: 0.1.0
  - name: diamond-c
    version: 0.1.0
  - name: diamond-a
    version: 0.1.0
dependencies:
  diamond-a:
    - diamond-b
    - diamond-c
  diamond-b:
    - diamond-d
  diamond-c:
    - diamond-d
  diamond-d: []
skipped: []
registry_name: crates-io
