crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__empty_workspace_plan.snap
---
source: crates/shipper-core/src/plan/mod.rs
expression: snapshot_of(&ws)
---
packages: []
dependencies: {}
skipped:
  - name: priv-a
    version: 0.1.0
    reason: publish = false
  - name: priv-b
    version: 0.1.0
    reason: publish = false
registry_name: crates-io
