crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__error_msg_cycle_detection.snap
---
source: crates/shipper-core/src/plan/mod.rs
expression: "format!(\"{err:#}\")"
---
dependency cycle detected within workspace publish set
