crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__error_msg_missing_manifest.snap
---
source: crates/shipper-core/src/plan/mod.rs
expression: "normalize_error_message(&format!(\"{err:#}\"))"
---
failed to execute cargo metadata: `cargo metadata` exited with an error: error: manifest path `nonexistent-dir/Cargo.toml` does not exist
