crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__error_msg_selecting_non_publishable.snap
---
source: crates/shipper-core/src/plan/mod.rs
expression: "format!(\"{err:#}\")"
---
selected package not found or not publishable: c
