crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__error_msg_unknown_selected_package.snap
---
source: crates/shipper-core/src/plan/mod.rs
expression: "format!(\"{err:#}\")"
---
selected package not found or not publishable: totally-unknown-crate
