crates/shipper-core/src/plan/snapshots/shipper_core__plan__tests__error_non_publishable_dep.snap
---
source: crates/shipper-core/src/plan/mod.rs
expression: "format!(\"{err:#}\")"
---
publishable package 'npdep' depends on non-publishable workspace member 'c'
